# sutsim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run.sh
.github/workflows/: run_tests.yaml
cmake/: default_options.cmake
docs/: dev_setup.md  new_project.md
examples/: CMakeLists.txt
examples/basic_baremetal/: CMakeLists.txt
examples/basic_baremetal/src/: CMakeLists.txt  sutsim_hooks.c
examples/basic_baremetal/test/: conftest.py  test_baremetal.py
examples/basic_heater/: CMakeLists.txt
examples/basic_heater/src/: CMakeLists.txt  app_temperature.c  heater.c  heater.h  pwm.c  pwm.h  sutsim_hooks.c  temperature_sensor.c  temperature_sensor.h
examples/basic_heater/test/: conftest.py
examples/src/: CMakeLists.txt  FreeRTOSConfig.h  app_task_config.c  app_tasks.c  app_temperature.c  firmware.c  pwm.c  rtos_app_hooks.c  sutsim_hooks.c  temperature_sensor.c  temperature_sensor.h
examples/test/: conftest.py  test_temperature_sensor.py
libs/freertos/: CMakeLists.txt
libs/freertos/port/sutsim/: port.c  portmacro.h
libs/sutsim/c/: CMakeLists.txt  sutsim.c  sutsim.h
libs/sutsim/cpp/: PeripheralInterface.hpp  sut_firmware.h
libs/sutsim/cpp/models/: TemperatureSensor.hpp
libs/task_config/: CMakeLists.txt  task_config.c  task_config.h
sim/: CMakeLists.txt  PeripheralInterface.hpp  PeripheralInterfaceMap.cpp  Simulator.cpp  Simulator.hpp  SutState.hpp  simulator.i  simulator_binding.cpp  simulator_binding.h
sim/core/: SignalRoute.hpp  SignalRouter.hpp  Simulator.cpp  Simulator.hpp  StateTag.hpp  SutContext.hpp
sim/firmware_conn/: PeripheralInterfaceMap.hpp  SutState.cpp  sut_firmware.cpp
sim/firmware_deps/: CMakeLists.txt  TemperatureSensor.hpp
sim/models/: TemperatureSensor.hpp  initializePeripherals.cpp
sim/py/: py_binding.cpp  py_binding.h  py_binding.i
sim/py/pysutsim/: sim_wrapper.py  sutsim_device.py  sutsim_fixtures.py
src/: CMakeLists.txt  firmware.c
test/: CMakeLists.txt  run_tests.sh  test_temperature_sensor.py  test_temperature_update.py
test/sim_artifacts/: simulator.py
